<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.pgzxc.customsetting.MainActivity">

        <com.pgzxc.customsetting.widget.TopTitleBar
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <!--映客贡献榜-->
        <com.pgzxc.customsetting.widget.InfoItemTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/border_bottom"
            app:editorable="no_edit"
            app:exist_right_text="no_exist"
            app:left_icon="@drawable/mine_inke_gift_range"
            app:left_text="@string/inke_gift_range"
            app:left_text_color="@color/black" />
        <!--小视频-->
        <com.pgzxc.customsetting.widget.InfoItemTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/border_bottom"
            app:editorable="no_edit"
            app:exist_right_text="no_exist"
            app:left_icon="@drawable/mine_video"
            app:left_text="@string/small_video"
            app:left_text_color="@color/black" />
        <!--观看记录-->
        <com.pgzxc.customsetting.widget.InfoItemTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/border_bottom"
            app:editorable="no_edit"
            app:exist_right_text="no_exist"
            app:left_icon="@drawable/mine_history"
            app:left_text="@string/mine_history"
            app:left_text_color="@color/black" />
        <!--收益-->
        <com.pgzxc.customsetting.widget.InfoItemTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/border_bottom"
            app:editorable="no_edit"
            app:left_icon="@drawable/mine_income"
            app:left_text="@string/mine_income"
            app:left_text_color="@color/black"
            app:right_text="@string/mine_income_number"
            app:right_text_color="@color/darkorange" />
        <!--账户-->
        <com.pgzxc.customsetting.widget.InfoItemTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/border_bottom"
            app:editorable="no_edit"
            app:left_icon="@drawable/mine_account"
            app:left_text="@string/mine_account"
            app:left_text_color="@color/black"
            app:right_text="@string/mine_account_num"
            app:right_text_color="@color/darkorange" />
        <!--等级-->
        <com.pgzxc.customsetting.widget.InfoItemTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/border_bottom"
            app:editorable="no_edit"
            app:left_icon="@drawable/mine_level"
            app:left_text="@string/mine_level"
            app:left_text_color="@color/black"
            app:right_text="@string/mine_level_num"
            app:right_text_color="@color/gray" />
        <!--礼包-->
        <com.pgzxc.customsetting.widget.InfoItemTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/border_bottom"
            app:editorable="no_edit"
            app:left_icon="@drawable/mine_mygiftpackage"
            app:left_text="@string/mine_mygif_package"
            app:left_text_color="@color/black"
            app:right_text="@string/mine_mygif_package_content"
            app:right_text_color="@color/gray" />
        <!--实名认证-->
        <com.pgzxc.customsetting.widget.InfoItemTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/border_bottom"
            app:editorable="no_edit"
            app:left_icon="@drawable/mine_auth"
            app:left_text="@string/mine_auth"
            app:left_text_color="@color/black"
            app:right_text="@string/mine_auth_verify"
            app:right_text_color="@color/gray" />
        <!--邀请好友-->
        <com.pgzxc.customsetting.widget.InfoItemTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/border_bottom"
            app:editorable="no_edit"
            app:left_icon="@drawable/mine_invite"
            app:left_text="@string/mine_invite"
            app:left_text_color="@color/black"
            app:right_text="@string/mine_invite_content"
            app:right_text_color="@color/gray" />
        <!--节目投票-->
        <com.pgzxc.customsetting.widget.InfoItemTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/border_bottom"
            app:editorable="no_edit"
            app:exist_right_text="no_exist"
            app:left_icon="@drawable/mine_vote"
            app:left_text="@string/mine_vote"
            app:left_text_color="@color/black" />
        <!--狼人杀-->
        <com.pgzxc.customsetting.widget.InfoItemTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/border_bottom"
            app:editorable="no_edit"
            app:left_icon="@drawable/mine_wolf_icon"
            app:left_text="@string/mine_wolf"
            app:left_text_color="@color/black"
            app:right_text="总局数0 胜率0%"
            app:right_text_color="@color/gray" />
        <!--任务中心-->
        <com.pgzxc.customsetting.widget.InfoItemTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/border_bottom"
            app:editorable="no_edit"
            app:exist_right_text="no_exist"
            app:left_icon="@drawable/mine_task"
            app:left_text="@string/mine_task"
            app:left_text_color="@color/black" />

        <!--设置-->
        <com.pgzxc.customsetting.widget.InfoItemTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/border_bottom"
            app:editorable="no_edit"
            app:exist_right_text="no_exist"
            app:left_icon="@drawable/mine_setting"
            app:left_text="@string/mine_setting"
            app:left_text_color="@color/black" />
    </LinearLayout>
</ScrollView>